jcache declarative configuration